<resources>
    <string name="app_name">BakeryRewardsAndroid</string>
    <string name="loginTitle">Login</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="click_to_sign_up">Click to sign up</string>
    <string name="submitLogin">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_points">My Points</string>
    <string name="point_num">0</string>
    <string name="item_scroll" />
    <string name="itemDescriptionTV">TextView</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="itemName">TextView</string>
    <string name="buyButton">Buy</string>
</resources>