<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="317dp"
        android:layout_height="439dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/loginTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="88dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="77dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signupButton"
                android:layout_width="253dp"
                android:layout_height="39dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/click_to_sign_up"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:text="@string/submitLogin" />
            <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_width="257dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>